--- a/css/style.css
+++ b/css/style.css
@@ -199,16 +199,16 @@
     position: relative;
 }
 
-.carousel-item a {
+ .carousel-item a {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 25px;
     background: linear-gradient(rgba(255, 181, 36, 0.7), rgba(255, 181, 36, 0.7));
-}
+} 
 
-.carousel-control-next,
+ .carousel-control-next,
 .carousel-control-prev {
     width: 48px;
     height: 48px;
@@ -226,7 +226,7 @@
 
 .carousel-control-prev {
     margin-left: 20px;
-}
+} */
 
 .page-header {
     position: relative;
