--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,13 @@
 }
 
 
+.height-set{
+    height: 21rem;
+}
+.height-set, p{
+    margin-bottom: 0;
+    margin-top: .5rem;
+}
 
 /*** Spinner Start ***/
 #spinner {
